web/book/tests/snapshots/snapshot__language-features__dates-and-times-1.snap
---
source: web/book/tests/snapshot.rs
expression: "from orders\nderive should_have_shipped_today = (order_time < @08:30)\n"
---
SELECT
  *,
  order_time < TIME '08:30' AS should_have_shipped_today
FROM
  orders

