web/book/tests/snapshots/snapshot__language-features__dates-and-times-3.snap
---
source: web/book/tests/snapshot.rs
expression: "from projects\nderive first_check_in = start + 10days\n"
---
SELECT
  *,
  start + INTERVAL 10 DAY AS first_check_in
FROM
  projects

