web/book/tests/snapshots/snapshot__language-features__distinct-1.snap
---
source: web/book/tests/snapshot.rs
expression: "from employees\nselect department\ngroup department (take 1)\n"
---
SELECT
  DISTINCT department
FROM
  employees

