web/book/tests/snapshots/snapshot__language-features__s-strings-1.snap
---
source: web/book/tests/snapshot.rs
expression: "from employees\naggregate [average salary]\n"
---
SELECT
  AVG(salary)
FROM
  employees

