web/book/tests/snapshots/snapshot__language-features__s-strings-4.snap
---
source: web/book/tests/snapshot.rs
expression: "from employees\nderive [\n  has_valid_title = s\"regexp_contains(title, '([a-z0-9]*-){{2,}}')\"\n]\n"
---
SELECT
  *,
  regexp_contains(title, '([a-z0-9]*-){2,}') AS has_valid_title
FROM
  employees

